fix overflow in mobile version

--- a/src/styles/core/global.scss
+++ b/src/styles/core/global.scss
@@ -1,11 +1,17 @@
+@import "./reset";
+@import "./variables";
+
 html {
   font-size: 62.5%;
+
+  overflow: hidden;
 }
 
 body {
   background-image: radial-gradient(circle at bottom, $bodyBackground 0%, $black 60%);
 
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
 
   font-size: 16px;
 
