--- a/src/styles/layout/landing/Logo.scss
+++ b/src/styles/layout/landing/Logo.scss
@@ -16,6 +16,11 @@
   align-items: center;
 
 
+  @media all and (max-height: 600px) {
+    height: 40rem;
+  }
+
+
   &__logo {
     border-radius: 50%;
     box-shadow: 0 0 1.5rem $white;
@@ -24,10 +29,17 @@
     max-width: 40rem;
 
     position: absolute;
+
+
+    @media all and (max-height: 600px) {
+      height: 30rem;
+      width: 30rem;
+    }
   }
 
 
   &__text {
+    width: 100%;
     height: 100%;
 
     color: $white;
@@ -45,6 +57,11 @@
       @media all and (min-width: 600px) {
         top: 0;
         transform-origin: 0 30rem;
+      }
+
+      @media all and (max-height: 600px) {
+        top: -5%;
+        transform-origin: 0 22rem;
       }
     }
   }
